🎨 style(product-main): improve product selector style by adding opacity transition and selected state 🐛 fix(product-main): fix hr color to black to improve contrast with background color

--- a/src/theme/sections/_product_main.scss
+++ b/src/theme/sections/_product_main.scss
@@ -1,12 +1,15 @@
 .product-main {
+    hr{
+        border-top-color: black;
+    }
     .product-selector {
         display: flex;
         gap: .75rem;
         [type=radio] {
-            // position: absolute;
-            // opacity: 0;
-            // width: 0;
-            // height: 0;
+            position: absolute;
+            opacity: 0;
+            width: 0;
+            height: 0;
             &:disabled{
                 cursor:not-allowed;
             }
@@ -14,6 +17,7 @@
 
         label {
             border: 1px solid black;
+            
             &.disabled{
                 cursor: not-allowed;
             }
@@ -21,6 +25,18 @@
                 width: 50px;
                 height: 65px;
                 object-fit: cover;
+                opacity: .5;
+                transition: opacity .25s ease-in-out;
+            }
+            &.selected{
+                img{
+                    opacity: 1
+                }
+            }
+            &:hover{
+                img{
+                    opacity: 1;
+                }
             }
         }
     }
